<resources>
    <string name="app_name">chat</string>
    <string name="string_name">姓名</string>
    <string name="string_phonenumber">电话号码</string>
    <string name="string_sort">组别</string>
    <string name="button_detail">详情</string>
    <string name="button_delete">删除</string>
    <string name="button_change">编辑</string>
    <string name="contactlist">联系人列表</string>
    <string name="string_sex">性别</string>
    <string name="string_email">邮箱地址</string>
    <string name="string_notes">备注</string>
    <string name="string_add">添加</string>
    <string name="string_search">搜索</string>
    <string name="string_sift">筛选</string>
    <string name="string_order">排序</string>
    <string name="string_delete">删除</string>
    <string name="string_cancel">取消</string>
    <string name="string_confirm">确认</string>
    <string name="string_nameasc">按姓名升序</string>
    <string name="string_namedec">按姓名降序</string>
    <string name="string_orderasc">按组别升序</string>
    <string name="string_orderdec">按组别降序</string>
</resources>