<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/one1"
        android:title="@string/string_add" />
    <item
        android:id="@+id/one2"
        android:title="@string/string_delete"/>
    <item
        android:id="@+id/one5"
        android:title="@string/string_order"/>
    <item
        android:id="@+id/one3"
        android:title="分组">
        <menu>
            <item
                android:id="@+id/two1"
                android:title="默认"/>
            <item
                android:id="@+id/two2"
                android:title="亲人"/>
            <item
                android:id="@+id/two3"
                android:title="同事"/>
            <item
                android:id="@+id/two4"
                android:title="朋友"/>
            <item
                android:id="@+id/two5"
                android:title="全部"/>
        </menu>
    </item>
</menu>