<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        android:src="@drawable/choose_no"
        tools:ignore="MissingConstraints"
        android:button="@null"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintLeft_toRightOf="@+id/imageView2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="8dp" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:gravity="center"
        android:text="@string/string_name"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_phonenumber"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:text="@string/string_phonenumber"
        app:layout_constraintStart_toStartOf="@+id/text_name"
        app:layout_constraintTop_toBottomOf="@+id/text_name"
        android:gravity="center"
        tools:ignore="MissingConstraints"
        />


    <TextView
        android:id="@+id/name_input"
        android:layout_width="120dp"
        android:layout_height="20dp"
        app:layout_constraintLeft_toRightOf="@+id/text_name"
        app:layout_constraintTop_toTopOf="@+id/text_name"
        tools:ignore="MissingConstraints"
        />

    <TextView
        android:id="@+id/number_input"
        android:layout_width="120dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintLeft_toRightOf="@+id/text_phonenumber"
        tools:ignore="MissingConstraints"
        />

    <TextView
        android:id="@+id/sort_text"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/string_sort"
        android:gravity="center"
        app:layout_constraintLeft_toRightOf="@+id/number_input"
        app:layout_constraintTop_toTopOf="@+id/name_input"
        tools:ignore="MissingConstraints"
        />
    <TextView
        android:id="@+id/sort"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:gravity="center"
        app:layout_constraintLeft_toRightOf="@+id/sort_text"
        app:layout_constraintTop_toTopOf="@+id/sort_text"
        tools:ignore="MissingConstraints"
        />


</androidx.constraintlayout.widget.ConstraintLayout>